tests/NormalTests/paczka1/fuzzy1/24621149.err
Error in line 12: zKFh6r1 A154 58,9
Error in line 22: 42eWlDCp A154 6,9
Error in line 29: A820 A154 96,4
Error in line 36: zKFh6r1 A820 346,7
Error in line 35: wrFkS S737 15,6
